--- a/MobileGPT_app/app/src/main/AndroidManifest.xml
+++ b/MobileGPT_app/app/src/main/AndroidManifest.xml
@@ -36,8 +36,7 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/Theme.MaterialComponents.Bridge"
-        tools:targetApi="31" >
+        android:theme="@style/Theme.MaterialComponents.Bridge">
 
         <activity
             android:name=".MainActivity"
@@ -49,7 +48,7 @@
         </activity>
 
         <service
-            android:name=".FluidAccessibilityService"
+            android:name=".MobileGPTAccessibilityService"
             android:exported="true"
             android:label="@string/accessibility_service_label"
             android:permission="android.permission.BIND_ACCESSIBILITY_SERVICE" >
