--- a/MobileGPT_app/settings.gradle
+++ b/MobileGPT_app/settings.gradle
@@ -12,5 +12,5 @@ dependencyResolutionManagement {
         mavenCentral()
     }
 }
-rootProject.name = "FluidGPT"
+rootProject.name = "MobileGPT"
 include ':app'
